vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__signal_missing_trailing_semicolon.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
signal clk : std_logic

== tree ==
SignalDeclaration
  Keyword(Signal)
  IdentifierList
    Identifier 'clk'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'std_logic'

== diagnostics ==
1:23 expected ';'
