vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__variable_declaration-2.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::variable_declaration,\n\"variable v, vv, vvv : natural := 1;\")"
---
VariableDeclaration
  Keyword(Variable)
  IdentifierList
    Identifier 'v'
    Comma
    Identifier 'vv'
    Comma
    Identifier 'vvv'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'natural'
  InitialValue
    ColonEq
    LiteralExpression
      AbstractLiteral '1'
  SemiColon
