vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__variable_declaration-3.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::variable_declaration,\n\"shared variable shared_v: natural;\")"
---
VariableDeclaration
  Keyword(Shared)
  Keyword(Variable)
  IdentifierList
    Identifier 'shared_v'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'natural'
  SemiColon
