vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__variable_declaration-4.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::variable_declaration,\n\"shared variable shared_v, shared_vv: natural;\")"
---
VariableDeclaration
  Keyword(Shared)
  Keyword(Variable)
  IdentifierList
    Identifier 'shared_v'
    Comma
    Identifier 'shared_vv'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'natural'
  SemiColon
