vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__variable_declaration.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "to_test_text(Parser::variable_declaration, \"variable v1: bit;\")"
---
VariableDeclaration
  Keyword(Variable)
  IdentifierList
    Identifier 'v1'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'bit'
  SemiColon
